[gd_scene load_steps=2 format=3 uid="uid://cip3vmney7ep7"]

[ext_resource type="Script" uid="uid://cdj32exerfhye" path="res://Scripts/HitBoxComponent.gd" id="1_ecg0x"]

[node name="HitBoxComponent" type="Area3D"]
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource("1_ecg0x")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
